fix: fix add collection to list